# optimization-playground

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md
topics/001-matmul/: BUILD  README.md  main.cpp  matmul.h  matmul_bench.cpp  matmul_loop_reorder.cpp  matmul_naive.cpp  matmul_naive_register_acc.cpp  matmul_omp.cpp  matmul_packed.cpp  matmul_reference.cpp  matmul_simd.cpp  matmul_test.cpp  matmul_tiled_1d.cpp  matmul_tiled_md.cpp  matrix_utils.cpp  matrix_utils.h
topics/002-lock-free-queue/: BUILD  README.md  spsc_queue.h  spsc_queue_bench.cpp  spsc_queue_test.cpp
topics/003-flat-hash-map/: BUILD  README.md  flat_hash_map_bench.cpp  flat_hash_map_test.cpp  hash_table_workloads.h
